<resources>
    <string name="app_name">Liza Shop</string>


    <string name="my_account">Мой Аккаунт</string>
    <string name="point_of_issue">Пункт выдачи</string>
    <string name="top_up_balance">Пополнить баланс</string>
    <string name="orders">Заказы</string>

    <string name="notification">Уведомления</string>
    <string name="push_notification">Пуш-уведомления</string>
    <string name="promotions_and_offers">Акции и предложения</string>

    <string name="account">Аккаунт</string>
    <string name="support">Поддержка</string>
    <string name="logout">Выход</string>
    <string name="greeting_text">Магазин вашей мечты. Здесь Вы найдете всё, что захотите</string>
    <string name="start_shopping">За покупками</string>
    <string name="phone">Телефон</string>
    <string name="password">Пароль</string>
    <string name="log_in">Войти</string>
    <string name="dont_have_account_reg">Нет аккаунта? <b>Зарегистрируйтесь</b></string>
    <string name="already_have_acc_sign_in">Уже есть аккаунт? Войдите</string>
    <string name="register">Зарегистрироваться</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="name">Имя</string>
    <string name="main">Главная</string>
    <string name="cart">Корзина</string>
    <string name="point">Пункт выдачи</string>
    <string name="categories">Категории</string>
    <string name="start_search">Начните поиск</string>
    <string name="delivery">Доставка</string>
    <string name="sale">Распродажа</string>
    <string name="profile">Профиль</string>
    <string name="passwords_mismatch">Пароли не совпадают</string>
    <string name="field_doesnt_be_empty">Поле не может быть пустым</string>
    <string name="incorrect_number_format">Неверный формат номера</string>
    <string name="incorrect_number_or_password">Номер телефона или пароль неверны</string>
    <string name="buy">Купить</string>
    <string name="minerals">Минералы</string>
    <string name="balance">Баланс</string>
    <string name="current_card">Текущая карта</string>
    <string name="add_card">Добавить карту</string>
    <string name="choose_all">Выбрать все</string>

</resources>